Bug 785140 - Correct SVG whitespace handling in various spots. r=smaug,dholbert