content/svg/content/src/SVGAnimatedPreserveAspectRatio.cpp
@@ -6,12 +6,12 @@
 #include "mozilla/Util.h"
 
 #include "SVGAnimatedPreserveAspectRatio.h"
-#include "nsWhitespaceTokenizer.h"
+#include "mozilla/dom/SVGAnimatedPreserveAspectRatioBinding.h"
 #include "nsSMILValue.h"
 #include "nsSVGAttrTearoffTable.h"
+#include "nsWhitespaceTokenizer.h"
 #include "SMILEnumType.h"
-#include "nsAttrValueInlines.h"
-#include "mozilla/dom/SVGAnimatedPreserveAspectRatioBinding.h"
+#include "SVGContentUtils.h"
 
 using namespace mozilla;
 using namespace mozilla::dom;
@@ -135,12 +135,9 @@ static nsresult
 ToPreserveAspectRatio(const nsAString &aString,
                       SVGPreserveAspectRatio *aValue)
 {
-  if (aString.IsEmpty() || NS_IsAsciiWhitespace(aString[0])) {
-    return NS_ERROR_DOM_SYNTAX_ERR;
-  }
-
-  nsWhitespaceTokenizer tokenizer(aString);
-  if (!tokenizer.hasMoreTokens()) {
+  nsWhitespaceTokenizerTemplate<IsSVGWhitespace> tokenizer(aString);
+  if (tokenizer.whitespaceBeforeFirstToken() ||
+      !tokenizer.hasMoreTokens()) {
     return NS_ERROR_DOM_SYNTAX_ERR;
   }
   const nsAString &token = tokenizer.nextToken();
@@ -172,7 +169,7 @@ ToPreserveAspectRatio(const nsAString &aString,
     val.SetMeetOrSlice(SVG_MEETORSLICE_MEET);
   }
 
-  if (tokenizer.hasMoreTokens()) {
+  if (tokenizer.whitespaceAfterCurrentToken()) {
     return NS_ERROR_DOM_SYNTAX_ERR;
   }
 
